--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -31,7 +31,10 @@ http {
     listen <%= ENV["PORT"] %>;
     server_name localhost;
     error_page 404 = /404.html;
-
+    
+    location ~ /.well-known { 
+    allow all;
+    }
     location / {
       root <%= ENV["APP_ROOT"] %>/public;
       <% if File.exists?(File.join(ENV["APP_ROOT"], "nginx/conf/.enable_pushstate")) %>
