--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -30,7 +30,7 @@ http {
   server {
     listen <%= ENV["PORT"] %>;
     server_name localhost;
-    error_page 404 = /404.html;
+    #error_page 404 = /404.html;
     
     location ~ /.well-known { 
     allow all;
